@@ -1,5 +1,9 @@
 2011-10-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* Add PointsToolbox/gram2dsq.m (v0.1.0):
+
+	- GRAM2DSQ Convert Gram matrix to squared distance matrix.
+
 	* FiltersToolbox/skeleton_label.m (v0.15.1):
 
 	- Fix bug. Take into account that some branches may not have
